<resources>
    <string name="app_name">MoviControlJax</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">Bienvenido</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="forgotPassword">¿Olvidaste tu Contraseña?</string>
    <string name="newaccount">¿No tienes cuenta?</string>
    <string name="register">Regístrate Aquí</string>
    <string name="changetxt">Texto</string>
</resources>