<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlueLightDash"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="35dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:src="@drawable/driver_ic_png" />

        <TextView
            android:id="@+id/txtInvitation"
            style="@style/viewCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:text="@string/welcome"
            android:textColor="@color/BluePetrolPrincipal"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/viewCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_edittext"
            android:drawableEnd="@drawable/ic_email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/viewCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edittext"
            android:drawableEnd="@drawable/ic_eye_closed"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/ButtonPrimary"
            android:text="@string/login"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtView2"
            style="@style/viewCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/forgotPassword"
            android:textColor="@color/TextSecondary" />

        <LinearLayout
            android:id="@+id/Registered"
            style="@style/viewCustom"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/newaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/newaccount"
                android:textColor="@color/TextSecondary" />

            <TextView
                android:id="@+id/registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/TextSecondary" />
        </LinearLayout>

        <TextView
            android:id="@+id/ptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changetxt"
            android:textColor="@color/TextSecondary" />

        <TextView
            android:id="@+id/ptxt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changetxt"
            android:textColor="@color/TextSecondary" />


    </LinearLayout>

</LinearLayout>